Adding bigwrites back to the Makefile
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@136 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/fuse/Makefile
+++ b/fuse/Makefile
@@ -17,7 +17,7 @@ LIBRARY  = $(PLFS_INSTALL_DIR)/libplfs.a
 #DIRECT_IO        = -o direct_io
 
 # big writes should aggregate small contiguous writes
-#BIG_WRITES       = -obig_writes
+BIG_WRITES       = -obig_writes
 
 # ALLOW_OTHER is needed to run as root to allow other users to see the mount
 UID := $(shell whoami)
