fixed the remove temporary container bug
added a version file



git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@139 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ SRCS       = $(wildcard *.cpp)
 HDRS       = $(wildcard *.h)
 OBJS       = $(addsuffix .o, $(basename $(SRCS) ) ) 
 VERSION    = $(shell /usr/bin/svnversion ..)
+TAG_VERSION := $(shell cat ../VERSION)
 
 # put -DNDEBUG in to turn off assertions, this can make a big difference
 # as many of the asserts are doing stats
@@ -13,7 +14,8 @@ VERSION    = $(shell /usr/bin/svnversion ..)
 # add -DVERBOSE to get verbose output
 DEBUG   = -DVERBOSE -DPLFS_TIMES -DNUTIL -DINDEX_CONTAINS_TIMESTAMPS \
 	      -DCOUNT_SKIPS 
-CXXFLAGS  = -g -Wall $(DEBUG) -fPIC -D_FILE_OFFSET_BITS=64 -DVERSION=$(VERSION)
+CXXFLAGS  = -g -Wall $(DEBUG) -fPIC -D_FILE_OFFSET_BITS=64 -DVERSION=$(VERSION)\
+            -DTAG_VERSION=$(TAG_VERSION)
 LDFLAGS = -lpthread
 
 UNAME		:= $(shell uname)
