split out library spec and fuse spec for separate srpms
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@152 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,8 @@ SRCS       = $(wildcard *.cpp)
 HDRS       = $(wildcard *.h)
 OBJS       = $(addsuffix .o, $(basename $(SRCS) ) ) 
 VERSION    = $(shell /usr/bin/svnversion ..)
-TAG_VERSION := $(shell cat ../VERSION)
+SYSTEMLIB  = /usr/lib64
+SYSTEMINC  = /usr/include/plfs
 
 # put -DNDEBUG in to turn off assertions, this can make a big difference
 # as many of the asserts are doing stats
@@ -14,8 +15,7 @@ TAG_VERSION := $(shell cat ../VERSION)
 # add -DVERBOSE to get verbose output
 DEBUG   = -DVERBOSE -DPLFS_TIMES -DNUTIL -DINDEX_CONTAINS_TIMESTAMPS \
 	      -DCOUNT_SKIPS 
-CXXFLAGS  = -g -Wall $(DEBUG) -fPIC -D_FILE_OFFSET_BITS=64 -DVERSION=$(VERSION)\
-            -DTAG_VERSION=$(TAG_VERSION)
+CXXFLAGS  = -g -Wall $(DEBUG) -fPIC -D_FILE_OFFSET_BITS=64 -DVERSION=$(VERSION)
 LDFLAGS = -lpthread
 
 UNAME		:= $(shell uname)
@@ -32,6 +32,10 @@ mpi: $(LIBRARY)
 $(LIBRARY): $(OBJS) 
 	@echo $(VERSION)
 	ar rcs $@ $(OBJS) 
+
+install: $(LIBRARY)
+	/bin/cp $(LIBRARY) $(SYSTEMLIB)/
+	/bin/cp $(HDRS) $(SYSTEMINC)/
 
 clean:
 	/bin/rm -f $(LIBRARY) *.o
