moved the versioning tags to the top level Makefile. added a data version file added summary to the python index parser cleaned up ad_plfs_write and read to be more like panfs and handle the ADIO_INDIVIDUAL stuff that uses different offsets better
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@159 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,9 @@
+include ../Makefile.defs
+
 LIBRARY    = libplfs.a
 SRCS       = $(wildcard *.cpp) 
 HDRS       = $(wildcard *.h)
 OBJS       = $(addsuffix .o, $(basename $(SRCS) ) ) 
-VERSION    = $(shell /usr/bin/svnversion ..)
 SYSTEMLIB  = /usr/lib64
 SYSTEMINC  = /usr/include/plfs
 
@@ -15,7 +16,7 @@ SYSTEMINC  = /usr/include/plfs
 # add -DVERBOSE to get verbose output
 DEBUG   = -DVERBOSE -DPLFS_TIMES -DNUTIL -DINDEX_CONTAINS_TIMESTAMPS \
 	      -DCOUNT_SKIPS 
-CXXFLAGS  = -g -Wall $(DEBUG) -fPIC -D_FILE_OFFSET_BITS=64 -DVERSION=$(VERSION)
+CXXFLAGS  = -g -Wall $(DEBUG) -fPIC -D_FILE_OFFSET_BITS=64 $(VERSION)
 LDFLAGS = -lpthread
 
 UNAME		:= $(shell uname)
