--- a/fuse/Makefile
+++ b/fuse/Makefile
@@ -1,8 +1,6 @@
 PLFS_INSTALL_DIR = ../src
 
-# get the svnversion info to put into .plfsdebug
-SVN_VERSION := $(shell svnversion ..)
-TAG_VERSION := $(shell cat ../VERSION)
+include ../Makefile.defs
 
 # something weird needed on snow leopard
 #SNOW = -D__DARWIN_64_BIT_INO_T=0 
@@ -10,9 +8,8 @@ TAG_VERSION := $(shell cat ../VERSION)
 # http://www.mail-archive.com/macfuse@googlegroups.com/msg01048.html
 
 TARGET   = plfs
-CXXFLAGS = -I$(PLFS_INSTALL_DIR) -DPLFS_TIMES -DCOUNT_SKIPS -g -Wall \
-		   -DSVN_VERSION=$(SVN_VERSION) -DTAG_VERSION=$(TAG_VERSION)
-LDFLAGS  = -L$(PLFS_INSTALL_DIR) -lplfs 
+CXXFLAGS = -I$(PLFS_INSTALL_DIR) -DPLFS_TIMES -DCOUNT_SKIPS -g -Wall $(VERSION) 
+LDFLAGS  = -L$(PLFS_INSTALL_DIR) -lplfs  
 LOG      = /tmp/plfs.log
 LIBRARY  = $(PLFS_INSTALL_DIR)/libplfs.a
 
