got Adam's bug fix in for when the map doesn't match the mount
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@208 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/fuse/Makefile
+++ b/fuse/Makefile
@@ -44,7 +44,7 @@ ifeq ($(UNAME), Darwin)
 	UMOUNT    = umount $(PLFS_MNT)
 	# also google for -oauto_xattr and noapplespecial and noappledouble
 	# -omodules=volicon -oiconpath=../../mac/plfs.icns
-	PLFS_ARGS = -o volname=PLFS $(PLFS_SHARED_ARGS) -plfs_bufferindex=0
+	PLFS_ARGS = -o volname=PLFS $(PLFS_SHARED_ARGS)
 	CXXFLAGS += -D__FreeBSD__=10
 else
 	PLFS_ARGS = $(PLFS_SHARED_ARGS) 
