fix alt root build
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@219 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/fuse/Makefile.am
+++ b/fuse/Makefile.am
@@ -75,7 +75,7 @@ plfs_CXXFLAGS = \
 @PLFS_FUSE_CXXFLAGS@
 
 plfs_LDFLAGS = \
--L$(top_srcdir)/src \
+-L../src \
 @PLFS_FUSE_LDFLAGS@ @PLFS_FUSE_LIBS@ \
 -lplfs
 endif
