fix trace build... again - sorry
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@224 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/trace/Makefile.am
+++ b/trace/Makefile.am
@@ -52,8 +52,10 @@ plfs_map_SOURCES = \
 $(sources)
 
 plfs_map_CXXFLAGS = \
--I$(top_srcdir)/src
+-I$(top_srcdir)/src \
+@PLFS_DEBUG_CFLAGS@
 
 plfs_map_LDFLAGS = \
--L../src -lplfs
+-L../src -lplfs \
+@PTHREAD_LIBS@
 
