--- a/plfsrc.example
+++ b/plfsrc.example
@@ -4,12 +4,12 @@ num_hostdirs 32
 # this should be related to how many threads you want running on a machine
 threadpool_size 16
 
-# these must be full paths
-backends /tmp/.plfs_store1,,,,,/tmp/.plfs_store2,/tmp/.plfs_store3
+# these must be full paths, can be just a single one
+backends /tmp/.plfs_store
 
 # this must match where FUSE is mounted and the logical paths passed to ADIO
-mount_point /var/tmp/plfs
+mount_point /tmp/plfs
 
-# this shows how to read the logical, find the user name, hash it, and construct
+# this shows how to read the logical and construct
 # the physical, the beginning of it must match the mount point
-map /var/tmp/plfs/$1:HASH($1)/$1
+map /tmp/plfs/$1:HASH($1)/$1
