git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@245 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/plfsrc.example
+++ b/plfsrc.example
@@ -12,4 +12,6 @@ mount_point /tmp/plfs
 
 # this shows how to read the logical and construct
 # the physical, the beginning of it must match the mount point
-map /tmp/plfs/$1:HASH($1)/$1
+# the end of it should match the backend
+# see plfsrc.example.lanl for a more complicated plfsrc file
+map /tmp/plfs/:/tmp/.plfs_store
