also add -D_FILE_OFFSET_BITS=64 to ad_plfs CFLAGS
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@260 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/ad_plfs/Makefile.am
+++ b/ad_plfs/Makefile.am
@@ -66,6 +66,7 @@ $(headers) \
 $(sources)
 
 libadplfs_la_CFLAGS = \
+-D_FILE_OFFSET_BITS=64 \
 -I$(top_srcdir)/src \
 @PLFS_MPI_CFLAGS@ \
 @PLFS_ROMIO_CFLAGS@
