add example2 and new POSIX README to dist.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@278 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Makefile.am
+++ b/Makefile.am
@@ -52,7 +52,9 @@ Changelog \
 easyconf.sh \
 README.install \
 README.testing \
+README.POSIX \
 plfsrc.example \
+plfsrc.example2 \
 plfsrc.example.lanl \
 ad-patches
 
