add README to dist
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@290 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/fuse/Makefile.am
+++ b/fuse/Makefile.am
@@ -41,7 +41,8 @@
 
 EXTRA_DIST = \
 plfs.sysconfig \
-plfs.init
+plfs.init \
+README
 
 ################################################################################
 # plfs
