bye bye trace, hello tools
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@373 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/configure.ac
+++ b/configure.ac
@@ -176,9 +176,9 @@ config/Makefile
 src/Makefile
 fuse/Makefile
 ad_plfs/Makefile
-trace/Makefile
 scripts/Makefile
 tests/Makefile
+tools/Makefile
 ])
 
 AC_OUTPUT
