--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -39,7 +39,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-noinst_PROGRAMS = \
+bin_PROGRAMS = \
 plfs_map \
 plfs_flatten_index
 
