--- a/ad_plfs/Makefile.am.ompi
+++ b/ad_plfs/Makefile.am.ompi
@@ -17,7 +17,7 @@
 # $HEADER$
 #
 
-#include $(top_srcdir)/Makefile.options
+include $(top_srcdir)/Makefile.options
 
 noinst_LTLIBRARIES = libadio_plfs.la
 libadio_plfs_la_SOURCES = \
