--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -40,7 +40,7 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 bin_PROGRAMS = \
-plfs_dump_config \
+plfs_check_config \
 plfs_map \
 plfs_flatten_index
 
@@ -74,16 +74,16 @@ plfs_flatten_index_LDFLAGS = \
 
 
 ################################################################################
-# plfs_dump_config
+# plfs_check_config
 ################################################################################
-plfs_dump_config_SOURCES = \
-plfs_dump_config.C
+plfs_check_config_SOURCES = \
+plfs_check_config.C
 
-plfs_dump_config_CXXFLAGS = \
+plfs_check_config_CXXFLAGS = \
 -I$(top_srcdir)/src \
 @PLFS_DEBUG_CFLAGS@
 
-plfs_dump_config_LDFLAGS = \
+plfs_check_config_LDFLAGS = \
 -L../src -lplfs \
 @PTHREAD_LIBS@
 
