make sure man page is built if common file changes
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@424 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -14,3 +14,17 @@ EXTRA_DIST = $(plfs_file_man_pages:.5=.5in)
 # Remove the generated man pages
 distclean-local:
 
+# Ensure that the man page directory exists before we try to make man
+# page files (because man/man5 has no config.status-generated
+# Makefile)
+dir_stamp = $(top_builddir)/man/man5/.dir-stamp
+
+# Also ensure that the man pages are rebuilt if the Makefile.commonin file
+# changes (e.g., configure was run again, meaning that the release
+# date or version may have changed)
+$(nodist_man_MANS): $(dir_stamp) $(top_builddir)/man/Makefile.commonin
+
+# was in dir_stamp rule $(mkdir_p) `dirname $@`
+$(dir_stamp):
+	touch "$@"
+
