added make clean for man pages
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@427 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -23,10 +23,10 @@ EXTRA_DIST = \
 
 
 # Remove the generated man pages
-distclean-local: \
-	rm man1/*.1
-	rm man3/*.3
-	rm man5/*.5
+clean-local:
+	-rm man1/*.1
+	-rm man3/*.3
+	-rm man5/*.5
 
 # Make sure man pages are rebuilt if configure was run
 dir_stamp = $(top_builddir)/man/.dir-stamp
