--- a/man/Makefile.commonin
+++ b/man/Makefile.commonin
@@ -9,13 +9,54 @@ MYNLand more information is available at \
 MYNL.I http\:\/\/institue.lanl.gov\/plfsMYNL
 
 SEEALSOREP = \
-plfs(1) other pages
+plfs(1), plfs_check_config(1), plfs_flatten_index(1), plfs_map(1)
 
 SEEALSOREP3 = \
-plfs(3) other api pages
+	plfs(3), \
+	is_plfs_file(3), \
+	plfs_access(3), \
+	plfs_buildtime(3), \
+	plfs_chmod(3), \
+	plfs_chown(3), \
+	plfs_close(3), \
+	plfs_create(3), \
+	plfs_debug(3), \
+	plfs_dump_config(3), \
+	plfs_dump_index(3), \
+	plfs_flatten_index(3), \
+	plfs_get_attr(3), \
+	plfs_index_stream(3), \
+	plfs_link(3), \
+	plfs_merge_indexes(3), \
+	plfs_mkdir(3), \
+	plfs_mode(3), \
+	plfs_open(3), \
+	plfs_query(3), \
+	plfs_read(3), \
+	plfs_readdir(3), \
+	plfs_readlink(3), \
+	plfs_rename(3), \
+	plfs_rmdir(3), \
+	plfs_serious_error(3), \
+	plfs_set_mpi(3), \
+	plfs_stats(3), \
+	plfs_statvfs(3), \
+	plfs_symlink(3), \
+	plfs_sync(3), \
+	plfs_trunc(3), \
+	plfs_unlink(3), \
+	plfs_utime(3), \
+	plfs_version(3), \
+	plfs_write(3), \
+	plfs_wtime(3)
+
+
+
+SEEALSOREP5 = \
+plfs(1), plfs_check_config(1), plfsrc(5) 
 
 COPYRIGHT = \
-Copyright (c) 2009, Los Alamos National Security, LLC All rights reserved. \
+\.\/Copyright (c) 2009, Los Alamos National Security, LLC All rights reserved. \
 MYNL\.\/Copyright 2009. Los Alamos National Security, LLC. This software was produced \
 MYNL\.\/under U.S. Government contract DE-AC52-06NA25396 for Los Alamos National \
 MYNL\.\/Laboratory (LANL), which is operated by Los Alamos National Security, LLC for \
@@ -78,7 +119,7 @@ MYNL\.\/
 	@ echo Creating $@ man page...
 	@ sed -e 's/#PACKAGE_STRING#/@PACKAGE_STRING@/g' \
 	  -e 's/#AUTHORS#/$(AUTHORSREP)/g' \
-	  -e 's/#SEEALSO#/$(SEEALSOREP)/g' \
+	  -e 's/#SEEALSO5#/$(SEEALSOREP5)/g' \
 	  -e 's/#COPYRIGHT#/$(COPYRIGHT)/g' \
 	  > $@ < $<
 	@ perl -pi -e 's/MYNL/\n/g' $@
