added support for an optional statfs command in the plfsrc
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@439 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/plfsrc.example
+++ b/plfsrc.example
@@ -1,3 +1,5 @@
+# also check man 5 plfsrc for more info about this file
+
 # this should be square root of total number of compute nodes
 num_hostdirs 32
 
