documentation of the index buffering size parameter in plfsrc
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@445 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/plfsrc.example
+++ b/plfsrc.example
@@ -6,6 +6,9 @@ num_hostdirs 32
 # this should be related to how many threads you want running on a machine
 threadpool_size 16
 
+# this is the amount of memory in megabytes available to use during writes
+index_buffer_mbs 64
+
 # this must match where FUSE is mounted and the logical paths passed to ADIO
 mount_point /tmp/plfs
 
