add search libs check in configure for lz flags needed to link.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@526 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/configure.ac
+++ b/configure.ac
@@ -160,6 +160,8 @@ AC_FUNC_GETGROUPS
 AC_FUNC_CHOWN
 AC_CHECK_MEMBERS([struct stat.st_blksize])
 
+AC_SEARCH_LIBS([gzseek], [z])
+
 AC_PLFS_DEUBG_FLAG_CHECK
 # first see what needs to be built - XXX ugly (update later)
 AC_PKG_PLFS_COMPONENTS
