added man page and fixed a silly bug where I was checking null on dirent instead of DIR *
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@534 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/man/Makefile.commonin
+++ b/man/Makefile.commonin
@@ -9,7 +9,7 @@ MYNLand more information is available at \
 MYNL.I http\:\/\/institute.lanl.gov\/plfsMYNL
 
 SEEALSOREP = \
-plfs(1), plfs(7), plfs_check_config(1), plfs_flatten_index(1), plfs_map(1)
+plfs(1), plfs(7), plfs_check_config(1), plfs_flatten_index(1), plfs_map(1),plfs_version(1)
 
 SEEALSOREP3 = \
 	plfs(3), \
