Added a backends checksum.  Added a README.developer.   Began adding tools/plfs_recover
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@540 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -6,6 +6,7 @@ plfs_cmd_man_pages = \
 	man1/plfs.1 \
 	man1/plfs_check_config.1 \
 	man1/plfs_flatten_index.1 \
+	man1/plfs_recover.1 \
 	man1/plfs_version.1 \
 	man1/plfs_map.1
 
