rip off 'plfs:' prefix on everything coming into plfs.  This really just matters for stuff coming in through PLFS API since FUSE won't recognize the prefix and since ADIO strips it off for us but this might just be useful if users get in the habit of using plfs: for MPI-IO and then they can use the same unmodified path if they need to do things like plfs_mkdir
got plfs_recover working well.  It automically
recovers the parent dir for a file as well.  On
the directory recovery, it ensures that the full
directory hierarchy is replicated across all
backends

added tools/plfs_query to allow developers easy
access to discover the plfs backend for a particular file

got the dropping going into global_summary_dir to contain
more info (i.e. job size and BW)



git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@544 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -4,6 +4,7 @@ include Makefile.commonin
 
 plfs_cmd_man_pages = \
 	man1/plfs.1 \
+  man1/plfs_query.1 \
 	man1/plfs_check_config.1 \
 	man1/plfs_flatten_index.1 \
 	man1/plfs_recover.1 \
